--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
     
     <link rel="stylesheet" href="./CSS/all.min.css">
     <link href="./css/output.css" rel="stylesheet">
-    <link rel="stylesheet" href="./CSS/main.css">
+    <!-- <link rel="stylesheet" href="./CSS/main.css"> -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.9.0/axios.min.js" integrity="sha512-FPlUpimug7gt7Hn7swE8N2pHw/+oQMq/+R/hH/2hZ43VOQ+Kjh25rQzuLyPz7aUWKlRpI7wXbY6+U3oFPGjPOA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body class="relative">
