--- a/index.htm
+++ b/index.htm
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     
-    <link rel="stylesheet" href="./CSS/all.min.css">
-    <link href="./css/output.css" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="./CSS/main.css"> -->
+    <link rel="stylesheet" href="CSS/all.min.css">
+    <link href="css/output.css" rel="stylesheet">
+    <link rel="stylesheet" href="CSS/main.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.9.0/axios.min.js" integrity="sha512-FPlUpimug7gt7Hn7swE8N2pHw/+oQMq/+R/hH/2hZ43VOQ+Kjh25rQzuLyPz7aUWKlRpI7wXbY6+U3oFPGjPOA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body class="relative">
@@ -28,13 +28,13 @@
                     <button class="categories-btn cursor-pointer text-white">Categories</button>
                 </li>
                 <li class=" py-2">
-                    <burron class="area-btn cursor-pointer text-white">Area</burron>
+                    <button class="area-btn cursor-pointer text-white">Area</button>
                 </li>
                 <li class="py-2">
                     <button class="Ingredients-btn cursor-pointer text-white">Ingredients</button>
                 </li>
                 <li class="py-2">
-                    <button class="Contact Us-btn cursor-pointer text-white">Contact Us</button>
+                    <button class="ContactUs-btn cursor-pointer text-white">Contact Us</button>
                 </li>
             </ul>
             <footer class="fixed bottom-0 w-[250px] p-6">
@@ -47,7 +47,7 @@
             </footer>
         </div>
         <div class="w-[50px] bg-white flex flex-col justify-between items-center p-6 text-2xl">
-            <div class="w-[40px]"><img src="./images/logo.png" class="" alt=" logo"></div>
+            <div class="w-[40px]"><img src="images/logo.png" class="" alt=" logo"></div>
             <div>
                  <button class="cursor-pointer close-menu hidden"><i class="fa-solid fa-x"></i></button> 
                  <button class="cursor-pointer open-menu"><i class="fa-solid fa-bars"></i></button> 
@@ -96,8 +96,8 @@
 
 
 
-    <script src="./js/jquery-3.7.1.min.js"></script>
-    <script src="./JS/index.js"></script>
+    <script src="js/jquery-3.7.1.min.js"></script>
+    <script src="JS/index.js"></script>
     
 </body>
 </html>
