--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     
-    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="CSS/all.min.css">
     <link href="dist/output.css" rel="stylesheet">
     <!-- <link rel="stylesheet" href="CSS/main.css"> -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.9.0/axios.min.js" integrity="sha512-FPlUpimug7gt7Hn7swE8N2pHw/+oQMq/+R/hH/2hZ43VOQ+Kjh25rQzuLyPz7aUWKlRpI7wXbY6+U3oFPGjPOA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -96,8 +96,8 @@
 
 
 
-    <script src="js/jquery-3.7.1.min.js"></script>
-    <script src="js/index.js"></script>
+    <script src="JS/jquery-3.7.1.min.js"></script>
+    <script src="JS/index.js"></script>
     
 </body>
 </html>
